--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -1,3 +1,163 @@
+/*==== CSS RESETS ====*/
+
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+  box-sizing: border-box;
+}
+
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+blockquote,
+q {
+  quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+button {
+  border: 0px;
+  cursor: pointer;
+  border-radius: 22px;
+  background-color: var(--primary);
+  width: 162px;
+  height: 44px;
+  color: #FFF;
+  text-align: center;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  font-family: SourceSansPro;
+}
+
+a {
+  text-decoration: none;
+  color: #FFF;
+}
+
 /*==== MY CSS ====*/
 @font-face {
   font-family: SourceSansPro;
@@ -10,10 +170,142 @@
 }
 
 :root {
-  --primary: #FF6565;
+  --primary: #C271FF;
+}
+
+.color-primary {
+  color: var(--primary);
 }
 
 html {
   font-family: SourceSansPro;
   font-style: normal;
+}
+
+header {
+  position: relative;
+  background-color: rgba(7, 22, 41, 1);
+}
+
+header .hero-background {
+  background: radial-gradient(85.90% 85.90% at 50.00% 14.10%, rgba(41, 48, 61, 0.00) 0%, #071629 100%), #000;
+  background-blend-mode: normal, color;
+  height: 1055px;
+}
+
+header .hero-background img {
+  width: 100%;
+  object-fit: cover;
+  mask-image: radial-gradient(rgba(7, 22, 41, 1), transparent);
+  -webkit-mask-image: radial-gradient(rgba(7, 22, 41, 1), transparent);
+  filter: grayscale(1);
+}
+
+header nav {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 29.5px;
+  padding-left: 175.67px;
+  padding-right: 169.08px;
+  padding-top: 35.02px;
+}
+
+header .nav-links {
+  display: flex;
+  justify-content: space-between;
+  gap: 52px;
+  text-transform: uppercase;
+  cursor: pointer;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.section-1 {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.section-1 .hero {
+  margin-top: 220px;
+  color: #FFF;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+}
+
+.section-1 .hero-heading {
+  text-align: center;
+  font-size: 120px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.section-1 .hero-heading-1 {
+  display: flex;
+  justify-content: center;
+  column-gap: 58px;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.section-1 .action-button {
+  margin-top: 38px;
+}
+
+.section-1 .learn-from-the-pros {
+  margin-top: 168px;
+  color: #FFF;
+}
+
+.learn-from-the-pros {
+  text-align: center;
+}
+
+.learn-from-the-pros .heading {
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+}
+
+.learn-from-the-pros .learn {
+  font-weight: 700;
+}
+
+.learn-from-the-pros .pros {
+  margin-top: 87px;
+  display: flex;
+  gap: 139px;
+}
+
+.pros img {
+  border-radius: 50%;
+}
+
+.pros .pro-name {
+  margin-top: 10px;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: 27px;
+}
+
+.pros .pro-description {
+  margin-top: 2px;
+  font-size: 16px;
+  font-style: italic;
+  font-weight: 400;
+  line-height: 24px;
 }
