--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -554,3 +554,32 @@ header .nav-links {
   font-weight: 400;
   line-height: 24px;
 }
+
+.footer {
+  color: #FFF;
+  background: #071629;
+  padding-top: 90px;
+  padding-bottom: 39px;
+}
+
+.footer .footer-items {
+  display: flex;
+  justify-content: center;
+  column-gap: 736px;
+}
+
+.footer-items .logo {
+  display: flex;
+  align-items: center;
+  column-gap: 18.02px;
+}
+
+.footer .copyright {
+  margin-top: 75px;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  opacity: 0.3516787588596344;
+  text-align: center;
+}
